# my-skills

./: .env  .env.example  .eslintrc.json  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  all_repos_auth.json  all_repos_full.json  all_repos_full_clean.json  docker-compose.yml  package-lock.json  package.json  push-skills.sh  test_data_adapter.py  user-stories.json
.claude/: ecc-tools.json
.claude/commands/: build-sequence-template.html  discover-pipeline.md  generate-pipeline.md  rcf-build-sequence.md  rcf-build-stage.md  rcf-create-build-graph.md  rcf-create-fbs.md  rcf-define-stage.md  rcf-execute-fbs.md  rcf-finalise-stage.md  rcf-functional-review.md  rcf-review-stage.md  rcf-test-coverage.md  rcf-test-stage.md  rcf-update-build-graph.md
.cursor/: mcp.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
agents/: __init__.py  base_agent.py  business_agent.py  coordinator.py  investment_agent.py  momentum_agent.py
client-config/: README.md  claude-desktop.json
data_adapter/: __init__.py  interface.py  rate_limiter.py
docs/: build-sequence-graph.html
localization/: dse_config.py
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/stock_buddy_mcp/: __init__.py  composites.py  dispatch.py  registry.py  server.py
prediction/: price_predictor.py
scripts/: import-portfolio.mjs  portfolio-skyler.json
skills/: ACCESS_PLAN.md  ACCESS_PLAN_RCF.md  USAGE.md
tests/: __init__.py  analysis-persistence.test.ts  test_data_adapter.py  test_indicators.py
ui/: checklist_generator.py
(+89 files in other folders)
