[project]
name = "stock-buddy-mcp"
version = "0.1.0"
description = "MCP server exposing the Stock Buddy DSE analysis Agent Skills as MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "stock-buddy" }]
keywords = ["mcp", "dse", "stocks", "agent-skills", "trading", "analysis"]
dependencies = [
  "mcp>=1.2.0",
  "anyio>=4.0",
]

[project.optional-dependencies]
# Needed only for the streamable-HTTP transport (STOCK_BUDDY_HTTP=1).
http = ["uvicorn>=0.30", "starlette>=0.37"]

[project.scripts]
stock-buddy-mcp = "stock_buddy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_buddy_mcp"]
